--- a/.web_package/config
+++ b/.web_package/config
@@ -1,9 +1,7 @@
-template = false
-master = "master"
-develop = "develop"
-remote = origin
-create_tags = minor
+master = 'master develop'
+develop = 'master develop'
+create_tags = patch
 push_tags = auto
+push_develop = no
 push_master = auto
-push_develop = auto
 patch_prefix = .
